Fixed spacing of signs with custom contents
Puts the custom text more towards the (vertical) center.

--- a/stylesheets/extend.css
+++ b/stylesheets/extend.css
@@ -47,8 +47,8 @@
   font-family: sans-serif;
   font-weight: bold;
   font-style: normal;
-  font-size: 45%;
-  line-height: inherit;
+  font-size: 39%;
+  line-height: 2.75;
   letter-spacing: -1px;
 }
 
@@ -57,7 +57,7 @@
   font-weight: bold;
   font-style: normal;
   font-size: 35%;
-  line-height: inherit;
+  line-height: 3.05;
   letter-spacing: -1px;
 }
 
